--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.1
+
   flutter:
     sdk: flutter
 
