Changelog: UI: 	Build all students to show list of all students 	Show suggestions based on existing data for Student Name and Lesson Type (in new Student page) 	Optimized UI- 		 Now elevated cards are only shown in the Capture Lessons page. History and All Students have a list structure 		Date display in History optimized to German standard 	Snackbars to show error information
App Logic:
	Edit Student and History data -
		Built alert dialog to handle updates to StudentData
		Built alert dialog to handle updates to History	::
			Created Date Time pickers (easier to use + data integrity)
			Can also edit lesson type
	Delete Student and History data -
		Can delete now directly from the dialog box

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.1
   intl: ^0.17.0
+  autocomplete_textfield: ^1.7.3
 
   flutter:
     sdk: flutter
