--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   path_provider: ^2.0.1
   intl: ^0.17.0
   autocomplete_textfield: ^1.7.3
+  pdf: ^3.1.0
+  open_file: ^3.1.0
 
   flutter:
     sdk: flutter
